Overflow correction

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
   height:100%;
+  overflow: auto;
 }
 
 header{
@@ -155,11 +156,12 @@ button:hover{
   border :solid 0.1rem gray; 
   border-radius: 2em;
 
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  padding: 1.2em;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  
+  padding: 1em;
   padding-left: 1.5em;
-  padding-right: 2em;
+  padding-right: 1.5em;
   max-width: 20em;
 
   box-shadow: 0.4rem 0.4rem 1rem rgb(177, 177, 177); 
